# Web-Development-Recap

./: README.md  pyproject.toml  requirements.txt  setup.py
app/: main.py
app/core/: logging.py  middleware.py
app/embeddings/: __init__.py  embedding_factory.py  vectorstore.py
app/ingestion/: pdf_loader.py  pymupdf_loader.py
app/pipeline/: document_normalizer.py
app/retriever/: query.py
app/summarizer/: ai_summary.py  llm_factory.py
config/: config.yaml
scripts/: debug_pdf_extraction.py  run_full_pipeline.py
tests/: check_pdf_type.py  test_embeddings.py  test_pdf_loader.py  test_rag_pipeline.py  test_vectorstore.py
utils/: config_loader.py  logger.py
