[project]
name = "aipower-rag-chatbot"
version = "0.1.0"
description = "RAG Chatbot with PDF ingestion"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.127.0",
    "uvicorn>=0.40.0",
    "streamlit",
    "langchain",
    "langchain-community",
    "langchain-openai",
    "langchain-chroma",
    "chromadb",
    "unstructured[all-docs]",
    "python-dotenv",
    "pillow",
]
